ui: add introductory video on home page! footer: fix footer overlap

--- a/webrecorder/static/stylesheets/footer.css
+++ b/webrecorder/static/stylesheets/footer.css
@@ -9,8 +9,8 @@ body {
 }
 
 .footer {
-    background-color: transparent;
-    position: absolute;
+    background-color: white;
+    position: static;
     bottom: 0;
     width: 100%;
     /* Set the fixed height of the footer here */
